kubernetes/k3s-prod-a/firefly/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: firefly
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: docker.io/fireflyiii/core:version-6.1.21@sha256:68b79eeb4d54060d715f4c3ea1f6e11e633b3446f6cf705034320ed1b9bea935
          ports:
            - containerPort: 8080
